@@ -53,7 +53,7 @@ userauth_kbdint(Authctxt *authctxt)
 	xfree(lang);
 #ifdef HAVE_CYGWIN
 	if (check_nt_auth(0, authctxt->pw) == 0)
-		return(0);
+		authenticated = 0;
 #endif
 	return authenticated;
 }
