@@ -55,12 +55,12 @@ userauth_passwd(Authctxt *authctxt)
 
 	if (change)
 		logit("password change not supported");
-	else if (PRIVSEP(auth_password(authctxt, password)) == 1
-#ifdef HAVE_CYGWIN
-	    && check_nt_auth(1, authctxt->pw)
-#endif
-	    )
+	else if (PRIVSEP(auth_password(authctxt, password)) == 1)
 		authenticated = 1;
+#ifdef HAVE_CYGWIN
+	if (check_nt_auth(1, authctxt->pw) == 0)
+		authenticated = 0;
+#endif
 	memset(password, 0, len);
 	xfree(password);
 	return authenticated;
